(lang dune 3.0)

(name publicomp)

(version 0.1.0)

(generate_opam_files false)

(formatting)

(source
 (uri git+https://github.com/EmileRolley/publicomp.git))

(homepage https://github.com/EmileRolley/publicomp)

(bug_reports https://github.com/EmileRolley/publicomp/issues)

(authors "Emile Rolley <emile.rolley@tuta.io>")

(maintainers "Emile Rolley <emile.rolley@tuta.io>")

(license MIT)

(using menhir 2.1)
